--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,9 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>kedSpringbootApp</name>
     <properties>
-        <java.version>25</java.version>
+        <java.version>17</java.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
     </properties>
     <dependencies>
         <dependency>
